--- a/config/config_FLEPseq2.yaml
+++ b/config/config_FLEPseq2.yaml
@@ -1,5 +1,6 @@
 basecalled_dir: "/ssd_workspace/jpeter/ssData/Guppy_basecalling/RUN08/Col0_urt1_heso1_uh/workspace"
-outdir: "/home/jpeter/DATA/FLEPseq/RUN08_Fleurs"
+outdir: "/home/jpeter/DATA/FLEPseq/RUN08_Fleurs_v2"
+barcode_corr: "/home/jpeter/DATA/FLEPseq/RUN08_Fleurs_v2/barcode_sorrespondances.tsv"
 
 runs_dir: "1_Runs"
 mapping_dir: "2_Mapping"
