--- a/config/config_FLEPseq2.yaml
+++ b/config/config_FLEPseq2.yaml
@@ -1,16 +1,19 @@
-basecalled_dir: "/ssd_workspace/jpeter/ssData/Guppy_basecalling/RUN07_20230124/workspace/"
-outdir: "/home/jpeter/DATA/FLEPseq/RUN07_Rep21_graines_seches_v2"
-barcode_corr: "/home/jpeter/DATA/FLEPseq/RUN07_Rep21_graines_seches_v2/barcode_correspondance.tsv"
+### EXPERIMENT SPECIFIC 
+basecalled_dir: "/ssd_workspace/jpeter/ssData/Guppy_basecalling/RUN12_Rep18_GS/workspace/" # Path to fast5 files
+outdir: "/home/jpeter/DATA/FLEPseq/RUN12_GS"
+barcode_corr: "/home/jpeter/DATA/FLEPseq/RUN12_GS/barcode_correspondance.tsv"
+sequencing_summary: "/home/jpeter/DATA/FLEPseq/RUN12_GS/sequencing_summary.txt"
 
+### OUTPUT FILES ORGANIZATION
 runs_dir: "1_Runs"
 mapping_dir: "2_Mapping"
 polyA_dir: "3_PolyA"
 tail_dir: "4_Tail"
 
+### ANNOTATIONS
 introns_exons: "/home/jpeter/DATA/ReferenceGenomes/Athaliana/TAIR10/exon_intron_pos.repr.bed"
 select_introns: "/home/jpeter/DATA/ReferenceGenomes/Athaliana/TAIR10/select_introns.txt"
-
 reference_genome: "/home/jpeter/DATA/ReferenceGenomes/Athaliana/TAIR10/TAIR10_chr_all.fas" # Reference genome in fasta
 
-## MINIMAP MAPPING ADDITIONAL PARAMETERS
+### MINIMAP MAPPING ADDITIONAL PARAMETERS
 minimap2_add_opts: "--secondary=no -G 5000"
